--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -44,7 +44,7 @@
   
   <%# PAGE POUR LES UTILISATEURS %>
 
-  <div class="container index-articles">
+  <div class="container index-articles" data-aos="fade-up">
 
 
 
