--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,9 +19,9 @@
     <nav>
       <%= link_to "Accueil", root_path, class: ''%>
       <%= link_to "Selection de la semaine", root_path, class: ''%>
-      <%= link_to "Nos produits", root_path, class: ''%>
-      <%= link_to "Recettes", root_path, class: ''%>
-      <%= link_to "Articles", root_path, class: ''%>
+      <%= link_to "Nos produits", products_path, class: ''%>
+      <%= link_to "Recettes", recipes_path, class: ''%>
+      <%= link_to "Articles", articles_path, class: ''%>
       <%= link_to "Infos pratiques", about_path, class: ''%>
     </nav>
   </div>
