--- a/app/views/shared/_order.html.erb
+++ b/app/views/shared/_order.html.erb
@@ -1,4 +1,4 @@
-  <section class="how-to-order">
+  <section class="how-to-order" data-aos="fade-right">
 
     <h2>Pour passer commande, c'est simple</h2>
     <div class= 'how-to-order-steps'>
@@ -21,7 +21,7 @@
   
   </section>
 
-  <section class = 'order-casamiam'>
+  <section class = 'order-casamiam' data-aos="fade-left">
     <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621600909/Seeds/Logo_CM_png_512_u5w2ia.png', class: 'mobile'%>
     <div class= "casamiam-explanation">
       <h2>Casamiam</h2>
