--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Just Fish - Poissonnerie Valenciennes</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,5 +18,7 @@
       <p class="alert"><%= alert %></p>
     <%= render 'shared/footer' %>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
+
 </html>
