--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-aos="fade-up">
   <h1 class = 'about-title'>Infos pratiques</h1>
 
   <div class="about">
