--- a/app/views/pages/products.html.erb
+++ b/app/views/pages/products.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <h1 class = 'title-products'>Nos produits</h1>
+  <h1 class = 'title-products' data-aos="fade-up">Nos produits</h1>
 
-  <div class = 'products-presentation'>Pour les produits frais, passez commande au moins 24h en avance. <br> Les produits avec une durée de conservation longue peuvent être achetés directement en boutique. </div>
-  <%= link_to "Voir la selection de la semaine", root_path, class: 'small-btn'%>
+  <div class = 'products-presentation' data-aos="fade-up">Pour les produits frais, passez commande au moins 24h en avance. <br> Les produits avec une durée de conservation longue peuvent être achetés directement en boutique. </div>
+  <div data-aos="fade-up"> <%= link_to "Voir la selection de la semaine", root_path, class: 'small-btn'%></div>
 
   <div class="product-category">
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
       <%= cl_image_tag @poissons_frais%>
       <div>
         <h3>Poissons frais</h3>
@@ -15,7 +15,7 @@
       </div>
     </article>
 
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @huitres%>
         <div>
           <h3>Huitres</h3>
@@ -24,7 +24,7 @@
         </div>
     </article>
 
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @coquillages%>
         <div>
           <h3>Coquillages et crustacés</h3>
@@ -33,7 +33,7 @@
         </div>
     </article>
 
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @poissons_fumes%>
         <div>
           <h3>Poissons fumés</h3>
@@ -41,7 +41,7 @@
           <p class = 'detail-order'>Selon arrivage</p>
         </div>
     </article>
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @produits_conditionnes%>
         <div>
           <h3>Produits conditionnés</h3>
@@ -49,7 +49,7 @@
           <p class = 'detail-order'>En boutique</p>
         </div>
     </article>
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @produits_surgeles%>
         <div>
           <h3>Produits surgelés</h3>
@@ -57,7 +57,7 @@
           <p class = 'detail-order'>En boutique</p>
         </div>
     </article>
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @epicerie%>
         <div>
           <h3>Epicerie</h3>
@@ -65,7 +65,7 @@
           <p class = 'detail-order'>En boutique</p>
         </div>
     </article>
-    <article class="card-product-category ">
+    <article class="card-product-category " data-aos="fade-up">
         <%= cl_image_tag @alcools%>
         <div>
           <h3>Alcools</h3>
