--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container show-recipe">
+<div class="container show-recipe" data-aos="fade-up">
   <h1><%= @recipe.title %></h1>
   <% if @recipe.image.attached? %>
     <%= cl_image_tag @recipe.image.key, class: 'recipe-image' %>
