--- a/app/views/pages/products.html.erb
+++ b/app/views/pages/products.html.erb
@@ -2,7 +2,7 @@
   <h1 class = 'title-products' data-aos="fade-up">Nos produits</h1>
 
   <div class = 'products-presentation' data-aos="fade-up">Pour les produits frais, passez commande au moins 24h en avance. <br> Les produits avec une durée de conservation longue peuvent être achetés directement en boutique. </div>
-  <div data-aos="fade-up"> <%= link_to "Voir la selection de la semaine", root_path, class: 'small-btn'%></div>
+  <div data-aos="fade-up"> <%= link_to "Voir la selection de la semaine", root_path(anchor: "weekly-products-anchor"), class: 'small-btn'%></div>
 
   <div class="product-category">
     <article class="card-product-category " data-aos="fade-up">
