--- a/app/assets/stylesheets/pages/_articles.scss
+++ b/app/assets/stylesheets/pages/_articles.scss
@@ -51,7 +51,7 @@
       }
       h3{color: $secondary-blue}
       .recipe-image{
-        height: 100%;
+        height: 350px;
       }
     }
   }
