--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -35,3 +35,16 @@
   margin: 0 auto;
   cursor: pointer
 }
+
+.destroy-session{
+  padding:10px;
+  margin: 10px;
+  border-radius: 10px;
+  border: 1px solid rgb(192, 150, 150);
+  color:rgb(192, 150, 150);
+  width: 120px;
+}
+
+.very-small-btn{
+  font-weight: bold;
+}
