--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,11 +8,15 @@ footer{
   background-color: $light-bg;
   margin-top: 50px;
 
+
   //background-image: url(https://res.cloudinary.com/debeemobv/image/upload/v1621587735/Seeds/footer_zqz60h.png);
   .container-footer{
     margin: 24px;
     display: inline;
     margin-bottom: 40px;
+    img{
+      height: 100px;
+    }
     .global-infos{
       display: flex;
       section{
@@ -28,6 +32,7 @@ footer{
     background: none;
     height: auto;
     background-color: $light-bg;
+    img{display: none;}
     .container-footer{
       .global-infos{
         display: block;
