--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <h3>Just Fish Poissonnerie</h3>
     <div class = "global-infos">
       <section class="location">
-        <h4>Adresse</h4>
+        <h4>Contact & adresse</h4>
         <p><%= markdown(Textbox.find_by(name:"contact").content) %></p>
         <%= link_to "Ouvrir dans Google Maps", "https://goo.gl/maps/eSEcWVnXH3gtq4fZ8", class: 'very-small-btn', target: :_blank%>
       </section>
