--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,7 +16,7 @@
       <h2>Livraisons</h2>
       <p><%= markdown(@livraisons.content) %></p>
     </div>
-    <%= cl_image_tag @picture_about%>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10193.667296797948!2d3.65532!3d50.302813!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x94cb27c35cea8850!2sJUST%20FISH%20-%20POISSONNERIE!5e0!3m2!1sfr!2sfr!4v1622102927150!5m2!1sfr!2sfr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
   </div>
 
