--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="<%= meta_description %>">
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_CA/sdk.js#xfbml=1&version=v10.0" nonce="M5n20w4A"></script>
 
 
     <!-- Facebook Open Graph data -->
@@ -37,7 +39,6 @@
       <p class="alert"><%= alert %></p>
     <%= render 'shared/footer' %>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 
 </html>
