--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,16 +5,50 @@
       <section class="location">
         <h4>Contact & adresse</h4>
         <p><%= markdown(Textbox.find_by(name:"contact").content) %></p>
-        <%= link_to "Ouvrir dans Google Maps", "https://goo.gl/maps/eSEcWVnXH3gtq4fZ8", class: 'very-small-btn', target: :_blank%>
+        <%= link_to 'https://www.facebook.com/JustFish.Poissonnerie.fr/', target: :_blank do  %>
+          <i class="fab fa-facebook"></i> <small>Just Fish Poissonnerie</small>
+        <% end %>
       </section>
 
       <section class="horaires">
         <h4>Horaires</h4>
         <p> <%= markdown(Textbox.find_by(name:"horaires").content) %></p>
       </section>
-      <%= cl_image_tag "https://res.cloudinary.com/debeemobv/image/upload/v1621610775/Seeds/Logo-removebg-preview_semzxt.png"%>
+      <div class = 'subscription-form'>
+        <!-- Begin Mailchimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+          <form action="https://gmail.us6.list-manage.com/subscribe/post?u=4b3a5bfce8c97e5ea5a99ddf9&amp;id=48212a46d3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="mc-field-group">
+                <label for="mce-EMAIL">Adresse mail </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+              </div>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4b3a5bfce8c97e5ea5a99ddf9_48212a46d3" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="S'inscrire à notre newsletter" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+          </form>
+        </div>
+        <!--End mc_embed_signup-->
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
+      </div>
+  
+      <iframe class = "desktop"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10193.667296797948!2d3.65532!3d50.302813!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x94cb27c35cea8850!2sJUST%20FISH%20-%20POISSONNERIE!5e0!3m2!1sfr!2sfr!4v1622102927150!5m2!1sfr!2sfr" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
+    </div>
+
+    <div class= 'mentions-legales-footer' >
+        <%= link_to 'Mentions légales et CGV', mentions_path%>
     </div>
   </div>
 </footer>
