--- a/app/views/shared/_order.html.erb
+++ b/app/views/shared/_order.html.erb
@@ -4,17 +4,17 @@
     <div class= 'how-to-order-steps'>
       <div>
         <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
-        <h3>1. Prenez connaissance</h3>
-        <p>de la selection de la semaine</p>
+        <h3>1. Découvrez</h3>
+        <p>notre selection hebdomadaire</p>
       </div>
       <div>
         <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
-        <h3>2. Reservez votre panier</h3>
-        <p>Sur l'application <strong>Casamiam</strong> <br> ou par <strong>mail</strong>, en précisant bien votre commande</p>
+        <h3>2. Réservez</h3>
+        <p>Sur l'application <strong>Casamiam</strong>, <br> par mail (contact@justfish.fr), <br> ou en boutique</p>
       </div>
       <div>
         <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
-        <h3>3. Venez retirer<br>votre commande </h3>
+        <h3>3. Retirez<br>votre commande </h3>
         <p>en boutique</p>
       </div>
     </div>
@@ -24,7 +24,7 @@
   <section class = 'order-casamiam' data-aos="fade-left">
     <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621600909/Seeds/Logo_CM_png_512_u5w2ia.png', class: 'mobile'%>
     <div class= "casamiam-explanation">
-      <h2>Casamiam</h2>
+      <h2>Just Fish dans votre poche avec Casamiam</h2>
       <p>Casamiam est une application. C’est ici que vous pouvez commander nos bons produits. <br> Rendez-vous dans notre boutique Just Fish Poissonnerie</p>
       <div>
         <%= link_to 'https://play.google.com/store/apps/details?id=com.casamiam.app', target: :_blank do  %>
