--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -1,6 +1,6 @@
 header{
   width: 100vw;
-  height: 90vh;
+  height: 85vh;
   display: flex;
   position: relative;
   z-index:0;
@@ -23,8 +23,8 @@ header{
     h1{
       font-family: $header-font;
       color: grey;
-      letter-spacing: 2px;
-      margin-bottom: 5px;
+      letter-spacing: 8px;
+      margin-bottom: 15px;
     }
     
   }
@@ -74,13 +74,16 @@ header{
     display: grid;
     grid-template-columns: 40% 60%;
     margin: 20px auto;
-    img{
-      height: 200px;
-      width: 100%;
-      object-fit: cover;
+    .image-container{
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      img{
+        height: 200px;
+        width: 100%;
+        object-fit: cover;
+      }
     }
     div{
       display: flex;
@@ -168,11 +171,13 @@ header{
   header{
     .homepage-main-picture{
       width: 100vw;
+      height: 90vh;
+
     }
     .homepage-logo{
       top: 50px;
       left: calc(100vw - 90%);
-      padding: 0 40px;
+      padding: 40px;
 
     }
   }
