--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -59,7 +59,7 @@
         <%= cl_image_tag article.image.key, class: ''%>
       <% end %>
       <h3><%= article.title %></h3>
-      <p class = "index-article-small-description"><%= article.small_description %></p>
+      <p class = "index-article-small-description"><%= markdown(article.small_description) %></p>
       <%= link_to "Lire", article_path(article), class: 'small-btn'%>
       <% end %>
     </div>
