--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,8 @@
 
   <section class="homepage-social">
     <div class = 'homepage-social-horaires'>
-    <div class =  'main-presentation-homepage'><%= markdown(@presentation_short.content) %></div>
+    <div class =  'main-presentation-homepage'>
+      <%= markdown(@presentation_short.content) %></div>
       <h2>Horaires</h2>
       <p> <%= markdown(@horaires_txt.content) %></p>
     </div>
@@ -24,11 +25,13 @@
   <% @articles.each do |article| %>
     <section class="homepage-article" data-aos="fade-right">
       <% if article.image.attached? %>
-      <%= cl_image_tag article.image.key%>
+      <div class="image-container">
+        <%= cl_image_tag article.image.key%>
+      </div>
       <% end %>
       <div>
         <h2><%= article.title %></h2>
-        <p><%= article.small_description %></p>
+        <p><%= markdown(article.small_description) %></p>
         <%= link_to "Lire l'article", article_path(article), class: 'button cta'%>
       </div>
     </section>
