--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,6 +15,7 @@
         <p> <%= markdown(Textbox.find_by(name:"horaires").content) %></p>
       </section>
       <div class = 'subscription-form'>
+        <h4>Newsletter</h4>
         <!-- Begin Mailchimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
         <style type="text/css">
@@ -26,15 +27,16 @@
           <form action="https://gmail.us6.list-manage.com/subscribe/post?u=4b3a5bfce8c97e5ea5a99ddf9&amp;id=48212a46d3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="mc-field-group">
-                <label for="mce-EMAIL">Adresse mail </label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                <label for="mce-EMAIL"> Recevez notre selection hebdomadaire, des bons plans et des recettes (une fois par semaine) </label>
+
+                <input type="email" value="" placeholder="Adresse e-mail" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
               <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
               </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4b3a5bfce8c97e5ea5a99ddf9_48212a46d3" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="S'inscrire à notre newsletter" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="clear"><input type="submit" value="S'inscrire" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
           </form>
         </div>
