--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
       <p> <%= markdown(@horaires_txt.content) %></p>
     </div>
   
-    <div class="fb-page desktop" data-href="https://www.facebook.com/JustFish.Poissonnerie.fr" data-tabs="timeline" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/JustFish.Poissonnerie.fr" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/JustFish.Poissonnerie.fr">Just Fish Poissonnerie</a></blockquote></div>
+    <div class="fb-page desktop" data-href="https://www.facebook.com/JustFish.Poissonnerie.fr" data-tabs="timeline" data-width="400" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/JustFish.Poissonnerie.fr" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/JustFish.Poissonnerie.fr">Just Fish Poissonnerie</a></blockquote></div>
   </section>
 
   <% @articles.each do |article| %>
