add contact interactive

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,11 +4,9 @@
   <div class="about">
     <div class = 'about-details'>
       <h2>Contact</h2>
+      <p><%= markdown(@contact.content) %></p>
 
-      <p>14 bis, Route nationale <br>
-      59144 Wargnies-le-Grand <br>
-      06-07-06-06-07 <br>
-      addresse@mail.fr</p>
+      
 
       <h2>Horaires</h2>
       <p><%= markdown(@horaires.content) %></p>
