--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -47,7 +47,7 @@
   
   <%# PAGE POUR LES UTILISATEURS %>
 
-  <div class="container index-articles" data-aos="fade-up">
+  <div class="container index-articles">
 
   <h1>Nos articles</h1>
 
