--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,32 +16,35 @@
       </section>
       <div class = 'subscription-form'>
         <h4>Newsletter</h4>
-        <!-- Begin Mailchimp Signup Form -->
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-        <style type="text/css">
-          #mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
-          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-        </style>
-        <div id="mc_embed_signup">
+          <!-- Begin Mailchimp Signup Form -->
+
+          <div id="mc_embed_signup">
           <form action="https://gmail.us6.list-manage.com/subscribe/post?u=4b3a5bfce8c97e5ea5a99ddf9&amp;id=48212a46d3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="mc-field-group">
                 <label for="mce-EMAIL"> Recevez notre selection hebdomadaire, des bons plans et des recettes (une fois par semaine) </label>
-
+              </label>
                 <input type="email" value="" placeholder="Adresse e-mail" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4b3a5bfce8c97e5ea5a99ddf9_48212a46d3" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="S'inscrire" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="mc-field-group">
+              </label>
+                <input type="text" value="" name="FNAME" placeholder="Prénom" class="required" id="mce-FNAME">
+              </div>
+              <div class="mc-field-group">
+              </label>
+                <input type="text" value="" name="LNAME" placeholder="Nom de famille" class="required" id="mce-LNAME">
+              </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4b3a5bfce8c97e5ea5a99ddf9_48212a46d3" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="S'inscrire" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
           </form>
-        </div>
-        <!--End mc_embed_signup-->
-        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          </div>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          <!--End mc_embed_signup-->
 
       </div>
   
@@ -54,3 +57,5 @@
     </div>
   </div>
 </footer>
+
+
