--- a/app/views/shared/_order.html.erb
+++ b/app/views/shared/_order.html.erb
@@ -1,4 +1,4 @@
-  <section class="how-to-order" data-aos="fade-right">
+  <section class="how-to-order">
 
     <h2>Pour passer commande, c'est simple</h2>
     <div class= 'how-to-order-steps'>
@@ -21,11 +21,11 @@
   
   </section>
 
-  <section class = 'order-casamiam' data-aos="fade-left">
+  <section class = 'order-casamiam'>
     <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621600909/Seeds/Logo_CM_png_512_u5w2ia.png', class: 'mobile'%>
     <div class= "casamiam-explanation">
       <h2>Just Fish dans votre poche avec Casamiam</h2>
-      <p>Casamiam est une application. C’est ici que vous pouvez commander nos bons produits. <br> Rendez-vous dans notre boutique Just Fish Poissonnerie</p>
+      <p>Casamiam est une application. <br> C’est ici que vous pouvez commander nos bons produits. <br> Rendez-vous dans notre boutique Just Fish Poissonnerie</p>
       <div>
         <%= link_to 'https://play.google.com/store/apps/details?id=com.casamiam.app', target: :_blank do  %>
           <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621602117/Seeds/bouton-google_put4e0.png', class: 'app-logo'%>
